unpackaged/main/default/objects/Case/fields/FLAGS__CaseTimeOffset2__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__CaseTimeOffset2__c</fullName>
    <description>The number of hours after the Case Flag Date/Time when Flag 2 will be displayed.</description>
    <label>Case Flags Age 2 Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>