unpackaged/main/default/objects/Case/fields/FLAGS__CaseTimeOffset3__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__CaseTimeOffset3__c</fullName>
    <description>The number of hours after the Case Flag Date/Time when Flag 3 will be displayed.</description>
    <label>Case Flags Age 3 Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>