unpackaged/main/default/objects/Case/fields/FLAGS__EndPoint__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__EndPoint__c</fullName>
    <description>The earlier of the current time and the end of the business day. Used in the computation of business hours.</description>
    <formula>MIN(FLAGS__NowHours__c,  FLAGS__CaseFlagsBusinessHours__r.FLAGS__EndTimeHours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>