unpackaged/main/default/objects/Case/fields/FLAGS__Initial_Response_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Initial_Response_Business_Hours__c</fullName>
    <description>The business hours between Date/Time Opened and Initial Response, based on the business hours assigned to the case.</description>
    <label>Initial Response Business Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>