unpackaged/main/default/objects/Case/fields/FLAGS__NowHours__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__NowHours__c</fullName>
    <description>The current time expressed as the hours elapsed since midnight. Used in the computation of business hours.</description>
    <formula>24*(NOW() -  FLAGS__CaseFlagsBusinessHours__r.FLAGS__Midnight__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Now Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>