unpackaged/main/default/objects/Case/fields/FLAGS__ViewedFlagHours__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__ViewedFlagHours__c</fullName>
    <description>The Case Flag Date/Time expressed as the hours elapsed since midnight.</description>
    <formula>24*(FLAGS__ViewedFlag__c - FLAGS__CaseFlagsBusinessHours__r.FLAGS__Midnight__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Flag Date/Time Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>