unpackaged/main/default/objects/Case/fields/IsMacOrder__c.field-meta.xml
<CustomField>
    <fullName>IsMacOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if case is an order vs service request</description>
    <inlineHelpText>Is this a move, add, or change SALES ORDER?</inlineHelpText>
    <label>IsMacOrder</label>
    <type>Checkbox</type>
</CustomField>