unpackaged/main/default/objects/Case/fields/IsNewSale__c.field-meta.xml
<CustomField>
    <fullName>IsNewSale__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a new install SALES ORDER?</description>
    <inlineHelpText>Is this a new install SALES ORDER?</inlineHelpText>
    <label>IsNewSale</label>
    <type>Checkbox</type>
</CustomField>