unpackaged/main/default/objects/Case/fields/Labor_Hours_HH_MM__c.field-meta.xml
<CustomField>
    <fullName>Labor_Hours_HH_MM__c</fullName>
    <inlineHelpText>Labor hours: min spent on the case (00:30) = 30 minutes</inlineHelpText>
    <label>Labor Hours (HH:MM)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>