unpackaged/main/default/objects/Case/fields/Level_3_Status__c.field-meta.xml
<CustomField>
    <fullName>Level_3_Status__c</fullName>
    <label>Level 3 Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case in Work</fullName>
            </value>
            <value>
                <fullName>Case is Resolved</fullName>
            </value>
            <value>
                <fullName>Need to Escalate</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Waiting On Customer</fullName>
            </value>
            <value>
                <fullName>Shipping in Progress</fullName>
            </value>
            <value>
                <fullName>Client Approval Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>