unpackaged/main/default/objects/Case/fields/Posted__c.field-meta.xml
<CustomField>
    <fullName>Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Variable used to indicate order has been posted nd is complte.</description>
    <label>Posted</label>
    <type>Checkbox</type>
</CustomField>