unpackaged/main/default/objects/Case/fields/Red_or_Black_Flagged__c.field-meta.xml
<CustomField>
    <fullName>Red_or_Black_Flagged__c</fullName>
    <formula>Case_Flag_Rolling_Business_Age__c  &gt;=   FLAGS__CaseTimeOffset3__c</formula>
    <label>Red or Black Flagged?</label>
    <type>Checkbox</type>
</CustomField>