unpackaged/main/default/objects/Case/fields/Service_State__c.field-meta.xml
<CustomField>
    <fullName>Service_State__c</fullName>
    <formula>Account.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service State</label>
    <type>Text</type>
</CustomField>