unpackaged/main/default/objects/Case/fields/Service_Zip__c.field-meta.xml
<CustomField>
    <fullName>Service_Zip__c</fullName>
    <formula>Account.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Zip</label>
    <type>Text</type>
</CustomField>