unpackaged/main/default/objects/Case/fields/Support_Tier_Text__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier_Text__c</fullName>
    <formula>CASE(

  Account.Support_Tier_Text__c,

  "Level1",  IMAGE("/servlet/servlet.FileDownload?file=0151W000002rvyj", "Red"),
  "Level2",  IMAGE("/servlet/servlet.FileDownload?file=0151W000002rx5q", "Yellow"),
  "Level3",  IMAGE("/servlet/servlet.FileDownload?file=0151W000002rx9T", "Green"),
  "Level4",  IMAGE("/servlet/servlet.FileDownload?file=0151W000002rxD1", "Black"),
"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SupportTier</label>
    <type>Text</type>
</CustomField>