unpackaged/main/default/objects/Case/fields/System_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>System Account Name</label>
    <referenceTo>Systems__c</referenceTo>
    <relationshipLabel>Systems</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>