unpackaged/main/default/objects/Case/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <formula>FLAGS__CaseFlagsEscalationTime3__c -  FLAGS__Case_Flag_Age__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test</label>
    <type>DateTime</type>
</CustomField>