unpackaged/main/default/objects/Case/validationRules/Level_2_Status_without_Proper_Level_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Level_2_Status_without_Proper_Level_1</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(ISPICKVAL( Level_1_Status__c , ""),NOT(ISPICKVAL(Level_1_Status__c,"Need To Escalate"))), 
NOT(ISPICKVAL(Level_2_Status__c,"")))</errorConditionFormula>
    <errorDisplayField>Level_2_Status__c</errorDisplayField>
    <errorMessage>Level 2 Status without Level 1 Escalation</errorMessage>
</ValidationRule>