unpackaged/main/default/objects/Case/validationRules/Level_3_Status_without_Proper_Level_3.validationRule-meta.xml
<ValidationRule>
    <fullName>Level_3_Status_without_Proper_Level_3</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(ISPICKVAL( Level_2_Status__c , ""),NOT(ISPICKVAL(Level_2_Status__c,"Need To Escalate"))), 
NOT(ISPICKVAL(Level_3_Status__c,"")))</errorConditionFormula>
    <errorDisplayField>Level_3_Status__c</errorDisplayField>
    <errorMessage>Level 3 Status without Level 2 Escalation</errorMessage>
</ValidationRule>