unpackaged/main/default/objects/Case/listViews/All_Cases_Community.listView-meta.xml
<ListView>
    <fullName>All_Cases_Community</fullName>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.REASON</columns>
    <columns>Case_Effort__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Company Cases</label>
    <language>en_US</language>
</ListView>