unpackaged/main/default/objects/Case/listViews/Case_Ready_for_Close_Case.listView-meta.xml
<ListView>
    <fullName>Case_Ready_for_Close_Case</fullName>
    <columns>Support_Tier_Text__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Billable__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CASES.REASON</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed,Closed As Duplicate</value>
    </filters>
    <label>Case Ready for Close (IPro)</label>
    <language>en_US</language>
    <queue>Case_Ready_for_Close</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>