unpackaged/main/default/objects/Case/listViews/Comm3_Closd_Cases2.listView-meta.xml
<ListView>
    <fullName>Comm3_Closd_Cases2</fullName>
    <booleanFilter>(1 and 2) or (1 and 3)</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Billable__c</columns>
    <columns>Time_With_Customer__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed,Closed As Duplicate</value>
    </filters>
    <filters>
        <field>Account_Source_ACQ__c</field>
        <operation>equals</operation>
        <value>Comm3</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Comm3 Cases</value>
    </filters>
    <label>Comm3 Closed Cases</label>
    <language>en_US</language>
    <sharedTo>
        <group>Group_Comm3</group>
    </sharedTo>
</ListView>