unpackaged/main/default/objects/Case/listViews/Comm3_Open_Cases_ReadyToClose.listView-meta.xml
<ListView>
    <fullName>Comm3_Open_Cases_ReadyToClose</fullName>
    <booleanFilter>(1 and 2) or (1 and 3) or (1 and  4) or (1 and 5)</booleanFilter>
    <columns>Support_Tier_Text__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Billable__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Ready for Billing/Closure</value>
    </filters>
    <filters>
        <field>Account_Source_ACQ__c</field>
        <operation>equals</operation>
        <value>Comm3</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Comm3 Cases</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Brandon Roper</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>rwils</value>
    </filters>
    <label>Comm3 Open Cases Ready to Close/Bill</label>
    <language>en_US</language>
    <sharedTo>
        <group>Group_Comm3</group>
    </sharedTo>
</ListView>