unpackaged/main/default/objects/Case/listViews/Comm3_Unassigned_Comm3_Alias.listView-meta.xml
<ListView>
    <fullName>Comm3_Unassigned_Comm3_Alias</fullName>
    <booleanFilter>1 and 2</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed,Closed As Duplicate,Ready for Billing/Closure</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Comm3 Cases</value>
    </filters>
    <label>Comm3 Unassigned</label>
    <language>en_US</language>
    <sharedTo>
        <group>Group_Comm3</group>
    </sharedTo>
</ListView>